<resources>
    <string name="app_name">PreScoop</string>
    <string name="action_settings">Settings</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="title_activity_school_details">SchoolDetails</string>
    <string name="collapsing_toolbar_image">school image for collapsing toolbar</string>
    <string name="title_activity_schools_map">Map</string>
    <string name="search_hint">zip, district, name, $, $$, $$$</string>
    <string name="number_of_visits">Number of Visits</string>
    <string name="visit_dates">Visit Dates</string>
    <string name="tot_complaint_invest_comp">Complaint Investigations Completed:</string>
    <string name="total_alleg_sub">- Allegations Substantiated:</string>
    <string name="total_alleg_incon">- Allegations Inconclusive:</string>
    <string name="total_type_a_citations">Type A Citations:</string>
    <string name="total_type_b_citations">Type B Citations:</string>
    <string name="total_complaint_visits">- Complaint Visits:</string>
    <string name="total_reports">Total Reports:</string>
    <string name="report_date_label">Date</string>
    <string name="report_title_label">Title</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="empty_yelp_response_title">No Matches Found, But Heres Some Related Preschools</string>
    <string name="empty_yelp_response">No matches from Yelp for reviews</string>
    <string name="facility_number">Facility Number:</string>
    <string name="facility_capacity">Facility Capacity:</string>
    <string name="status">Status:</string>
    <string name="license_date">License Date:</string>
    <string name="facility_type">Facility Type:</string>
    <string name="type_a_citation">Type A Citation</string>
    <string name="type_b_citation">Type B Citation</string>
    <string name="all_visits_fragment_info">All visits include Inspection Visits, other visits and may include complaint visits.</string>
    <string name="citation_fragment_info">One or more citations may be under appeal and/or may have been corrected. Contact the State Licensing Office for more information.</string>
    <string name="citation_a_more_info">Immediate heath, safety, or personal rights impact</string>
    <string name="citation_b_info">Potential health, safety or personal rights impact</string>
    <string name="num_inspections_label">Number of Inspections</string>
    <string name="inspection_dates_label">All Inspection Dates</string>
    <string name="other_visit_citation_info">Other visits include anything other than yearly inspections and complaints, where the state may visit for administrative or follow up purposes, such as pre/post licensing processes. One or more citations may be under appeal.</string>
    <string name="school_image">School Image</string>
    <string name="school_rating_image">school rating</string>
    <string name="filter_search_no_matches">No matches found.</string>
    <string name="price_sort">Sorted by Price</string>
    <string name="rating_sort">Sorted by Rating</string>
    <string name="abc_sort">Sorted Alphabetically</string>
    <string name="no_schools">No Saved Schools Yet</string>
    <string name="grant_location_permission">You need to grant location permission</string>
    <string name="remove_favorites">Removed From Favorites</string>
    <string name="add_favorites">Added To Favorites</string>
    <string name="inspection_details">Inspection Details</string>
    <string name="contact_school_price_label">$-Contact School</string>
    <string name="contact_school_label_details">Contact School</string>
    <string name="implement_click_listener">must implement List Item Click Listener</string>
    <string name="not_available">N/A</string>
    <string name="yelp_reviews_text">" Reviews"</string>
    <string name="html_color_num_blue">#000099</string>
    <string name="money_sign">$</string>
    <string name="per_month">" /mo"</string>
    <string name="reviews">" Reviews"</string>
    <string name="yelp_rating">Yelp Rating</string>
    <string name="yelp_icon_text">Yelp Icon</string>
    <string name="abc">abc</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="go_to_maps">Go To Maps</string>
    <string name="search_menu_main">Search</string>
    <string name="saved_schools_menu_main">Saved Schools</string>
    <string name="go_to_maps_details">Go To Maps</string>
</resources>
