<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/complaints_label_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">
        <TextView
            android:id="@+id/total_complaint_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tot_complaint_invest_comp"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/total_alleg_sub_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_alleg_sub"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="8dp"/>
        <TextView
            android:id="@+id/total_alleg_incon_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_alleg_incon"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:id="@+id/total_type_a_citation_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_type_a_citations"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/citation_a_more_info"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/total_type_b_citation_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_type_b_citations"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/citation_b_info"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/total_complaint_visits_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_complaint_visits"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/citations_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignTop="@+id/complaints_label_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/total_complaint_text_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="1"/>
        <TextView
            android:id="@+id/total_alleg_sub_text_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="1"/>
        <TextView
            android:id="@+id/total_alleg_incon_text_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="1"/>
        <TextView
            android:id="@+id/total_type_a_citation_text_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/total_type_b_citation_text_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/total_complaint_visits_text_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/label_info_text_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citation_fragment_info"
            android:gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>