<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/total_reports_layout_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/total_reports_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_reports"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/total_reports_text_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_reports_label_layout_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/total_reports_layout_frag">

        <TextView
            android:id="@+id/reports_date_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/report_date_label"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/reports_title_label_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/report_title_label"
            android:layout_marginStart="98dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_reports_text_layout_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/total_reports_label_layout_frag">
        <!--<TextView-->
            <!--android:id="@+id/reports_date_text_frag"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="16sp"-->
            <!--android:clickable="true"-->
            <!--android:onClick="listItemClicked"-->
            <!--android:layout_marginLeft="30dp"/>-->
        <!---->
        <!--<TextView-->
            <!--android:id="@+id/reports_title_text_frag"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_marginLeft="30dp"/>-->
        <ListView
            android:id="@+id/reports_list_view_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"></ListView>

    </LinearLayout>

</RelativeLayout>